change event date venue

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 					<div class="row m-3">
 						<div class="col-12 mb-3">
-							<h3 style="text-transform: none">18 & 19 February 2025<br />Putrajaya, Malaysia</h3>
+							<h3 style="text-transform: none">18 & 19 February 2026<br />Kuala Lumpur, Malaysia</h3>
 						</div>
 					</div>
 
@@ -94,7 +94,7 @@
 							<a href="#/aboutan">
 								<div class="card bg-secondary text-white" style="max-height: 6em;">
 									<div class="card-body">
-										<h5 class="card-title mb-0 text-white">ASIA NAVIGATOR 2025</h5>
+										<h5 class="card-title mb-0 text-white">ASIA NAVIGATOR 2026</h5>
 										<p class="card-text mt-2">About the Events</p>
 									</div>
 								</div>
